test/CheckError/StaticRef/InvalidStaticRefTypeCast.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() { }

void function0(staticref<TestClass> typename_t typeValue) {
	// CHECK: .loci:8:12: error: Can't implicitly cast value of type 'staticref<TestClass>(typename_t)&' to type 'staticref<TestClass>(int_t)'.
	function1(typeValue);
}

void function1(unused staticref<TestClass> int typeValue) { }

export int main(unused int argc, unused ubyte ** argv) {
	function0(TestClass);
	return 0;
}

// CHECK: 1 error generated.
